tests/baselines/reference/defaultExportsCannotMerge04.errors.txt
tests/cases/conformance/es6/modules/defaultExportsCannotMerge04.ts(2,25): error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
tests/cases/conformance/es6/modules/defaultExportsCannotMerge04.ts(5,11): error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
tests/cases/conformance/es6/modules/defaultExportsCannotMerge04.ts(9,11): error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
tests/cases/conformance/es6/modules/defaultExportsCannotMerge04.ts(12,18): error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.


==== tests/cases/conformance/es6/modules/defaultExportsCannotMerge04.ts (4 errors) ====
    
    export default function Foo() {
                            ~~~
!!! error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
    }
    
    namespace Foo {
              ~~~
!!! error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
        export var x;
    }
    
    interface Foo {
              ~~~
!!! error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
    }
    
    export interface Foo {
                     ~~~
!!! error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
    }